# Oops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  install.sh  pyproject.toml
oops/: __main__.py  config.py  main.py
oops/agents/: intel.py  orchestrator.py  plan.py  scope.py
oops/sandbox/: __init__.py  client.py  executor.py
oops/session/: __init__.py  manager.py  storage.py
oops/tools/: session_tools.py
oops/workflow/: __init__.py  approval.py  phases.py
src/: config.py  main.py
src/agents/: intel_agent.py  orchestrator.py  plan_agent.py  scope_agent.py
src/tools/: file_ops.py
